--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,24 +32,24 @@ jobs:
             
             # Pull latest changes
             echo "=== Pulling latest changes from git ==="
-            git pull origin main || { echo "Failed to pull latest changes"; exit 1; }
+            git pull origin static-website || { echo "Failed to pull latest changes"; exit 1; }
             echo "✓ Git pull successful"
             
             # Activate Python virtual environment
-            echo "=== Activating Python virtual environment ==="
-            source venv/bin/activate || { echo "Failed to activate virtual environment"; exit 1; }
-            echo "✓ Virtual environment activated"
+            # echo "=== Activating Python virtual environment ==="
+            # source venv/bin/activate || { echo "Failed to activate virtual environment"; exit 1; }
+            # echo "✓ Virtual environment activated"
             
             # Install/Update dependencies
-            echo "=== Installing/Updating Python dependencies ==="
-            pip install --upgrade pip
-            pip install -r requirements.txt || { echo "Failed to install requirements"; exit 1; }
-            echo "✓ Dependencies installed"
+            # echo "=== Installing/Updating Python dependencies ==="
+            # pip install --upgrade pip
+            # pip install -r requirements.txt || { echo "Failed to install requirements"; exit 1; }
+            # echo "✓ Dependencies installed"
             
             # Run Alembic migrations
-            echo "=== Running database migrations ==="
-            alembic upgrade head || { echo "Failed to run database migrations"; exit 1; }
-            echo "✓ Database migrations completed"
+            # echo "=== Running database migrations ==="
+            # alembic upgrade head || { echo "Failed to run database migrations"; exit 1; }
+            # echo "✓ Database migrations completed"
             
             # Restart systemctl service
             echo "=== Restarting systemctl service ==="
